# kdeconnect-kde-enhanced

./: README.md  diff.patch
daemon/: kdeconnectd.cpp
declarativeplugin/: kdeconnectdeclarativeplugin.cpp
kio/: kiokdeconnect.cpp
plasmoid/package/contents/ui/: DeviceDelegate.qml
plugins/notifications/: notification.cpp  notification.h
plugins/remotekeyboard/: CMakeLists.txt  remotekeyboardplugin.cpp
tests/: testdaemon.h
